tests/NormalTests/paczka1/fuzzy1/81808836.err
Error in line 4: rabf S107 53,2
Error in line 19: S221 S107 25,5
Error in line 23: S221 S355 11,4
Error in line 24: S221 A425 17,6
Error in line 28: jrGMB S355 15,0
Error in line 34: S221 S107 57,50
Error in line 29: S221 S221 53,3
